--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -248,6 +248,25 @@ input, select, textarea {
 
 		}
 
+/* Image Gallery - added by me */
+
+	.gallery {
+		display: flex;
+		flex-wrap: wrap;
+		box-sizing: border-box;
+		gap: 2rem;
+	}
+
+	.gallery-item {
+		flex: 1 1 25%;
+	}
+
+/*On hover, card size scales*/
+	.gallery-item:hover {
+		transform: scale(1.1);
+		z-index: 3;
+	}
+
 /* Row */
 
 	.row {
@@ -1851,16 +1870,6 @@ input, select, textarea {
 		position: relative;
 	}
 
-		.image:before {
-			background: url("images/overlay.png");
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
 		.image.fit {
 			display: block;
 		}
@@ -1879,6 +1888,16 @@ input, select, textarea {
 				display: block;
 				width: 100%;
 			}
+	
+		.image.overlay:before {
+			background: url("images/overlay.png");
+			content: '';
+			height: 100%;
+			left: 0;
+			position: absolute;
+			top: 0;
+			width: 100%;
+		}
 
 /* Icon */
 
@@ -1952,7 +1971,7 @@ input, select, textarea {
 					background: #829bc9;
 				}
 
-			.icon.circle.fa-google-plus-g {
+			.icon.circle.fa-instagram {
 				background: #db6b67;
 				color: #fff;
 			}
@@ -3224,9 +3243,9 @@ input, select, textarea {
 					text-align: center;
 				}
 
-			footer.major {
+			/* footer.major {
 				padding-top: 0;
-			}
+			} */
 
 		/* Icon */
 
