--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -267,6 +267,18 @@ input, select, textarea {
 		z-index: 3;
 	}
 
+/* Iframes */
+
+.iframe-div {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.iframe-div iframe {
+	margin: 1rem 1rem 2rem 1rem;
+	flex: 1 1 0; 
+}
 
 
 /* Row */
